Add logo for docs.

--- a/doc/yuidoc/theme/layouts/main.handlebars
+++ b/doc/yuidoc/theme/layouts/main.handlebars
@@ -19,7 +19,8 @@
             {{#if projectLogo}}
                 <h1><img src="{{projectLogo}}" title="{{projectName}}"></h1>
             {{else}}
-                <h1><img src="{{projectAssets}}/css/logo.png" title="{{projectName}}" width="117" height="52"></h1>
+                <!--<h1><img src="{{projectAssets}}/css/logo.png" title="{{projectName}}" width="117" height="52"></h1>-->
+                <h1><img src="{{projectAssets}}/css/logo_blue.png" title="{{projectName}}" width="117" height="52"></h1>
             {{/if}}
         </div>
         <div class="yui3-u-1-4 version">
